Fonts, Breadcurmb, alignment issues  fixed

--- a/src/app/common-utils/breadcrumbs/breadcrumbs.component.scss
+++ b/src/app/common-utils/breadcrumbs/breadcrumbs.component.scss
@@ -13,13 +13,6 @@
   padding-left: 5px;
 }
 
-::ng-deep .mat-icon {
-  color: $strom-grey;
-  padding-left: 6px;
-  width: 16px;
-  height: 18px;
-  vertical-align: middle;
-}
 .disable-arrow {
   color: $strom-grey;
   padding-left: 6px;
