--- a/src/app/components/care-delivery-page/prior-auth/prior-auth.component.scss
+++ b/src/app/components/care-delivery-page/prior-auth/prior-auth.component.scss
@@ -1,9 +1,9 @@
 @import '~src/scss/variables.scss';
 @import '~src/scss/mixins';
 .breadcrumb-top-padding {
-  @include margin(0, 0, 12px, 0);
+  @include margin(12px, 0, 12px, 0);
   box-sizing: border-box;
-  width: 961px;
+
   .filter-div {
     overflow: auto;
     line-height: 0;
@@ -59,7 +59,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  @include padding(16px, 20px, 30px, 20px);
+  @include padding(16px, 20px, 64px, 32px);
   .main-content {
     display: -webkit-box;
     display: -moz-box;
@@ -81,7 +81,7 @@
       @include margin(0, 0, 0, 12px);
     }
     .cust-width-title {
-      width: 450px;
+      width: 960px;
       font-family: 'UHCSans-SemiBold', Helvetica, Arial, sans-serif;
       color: $black-rock;
       ol {
@@ -90,7 +90,7 @@
       .page-title {
         flex-basis: 100%;
         font-size: 36px;
-        @include padding(16px, 0, 32px, 0);
+        @include padding(16px, 0, 20px, 0);
         color: $black-rock;
       }
       .page-subtitle {
@@ -104,8 +104,8 @@
         line-height: 50px;
       }
       .time--period {
+        display: inline-block;
         .horizontal-align {
-          display: inline-block;
           margin: 5px 0;
         }
         button {
