--- a/src/app/components/getting-reimbursed-page/appeals/appeals.component.scss
+++ b/src/app/components/getting-reimbursed-page/appeals/appeals.component.scss
@@ -1,7 +1,7 @@
 @import '~src/scss/variables.scss';
 @import '~src/scss/mixins';
 .breadcrumb-top-padding {
-  @include margin(0, 0, 12px, 0);
+  @include margin(12px, 0, 12px, 0);
   box-sizing: border-box;
   font-family: 'UHCSans-Medium', Helvetica, Arial, sans-serif;
   width: 961px;
@@ -57,7 +57,7 @@
 .page-title {
   flex-basis: 100%;
   font-size: 36px;
-  @include padding(16px, 0, 32px, 0);
+  @include padding(16px, 0, 20px, 0);
   line-height: 40px;
 }
 
