--- a/src/app/components/getting-reimbursed-page/getting-reimbursed/getting-reimbursed.component.scss
+++ b/src/app/components/getting-reimbursed-page/getting-reimbursed/getting-reimbursed.component.scss
@@ -2,9 +2,9 @@
 @import '~src/scss/mixins';
 @import '~src/scss/my-custom-theme';
 .breadcrumb-top-padding {
-  @include margin(0, 0, 24px, 0);
+  @include margin(12px, 0, 24px, 0);
   box-sizing: border-box;
-  width: 961px;
+
   .filter_bg {
     box-sizing: border-box;
     border: 1px solid $blue;
@@ -60,7 +60,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    @include padding(16px, 20px, 30px, 20px);
+    @include padding(16px, 20px, 64px, 32px);
 
     .gettingReimburse-content {
       display: flex;
@@ -102,7 +102,7 @@
         .page-title {
           flex-basis: 100%;
           font-size: 36px;
-          @include padding(16px, 0, 32px, 0);
+          @include padding(16px, 0, 20px, 0);
           line-height: 40px;
         }
         .page-subtitle {
