--- a/src/app/components/getting-reimbursed-page/payment-integrity/payment-integrity.component.scss
+++ b/src/app/components/getting-reimbursed-page/payment-integrity/payment-integrity.component.scss
@@ -1,9 +1,9 @@
 @import '~src/scss/variables.scss';
 @import '~src/scss/mixins';
 .breadcrumb-top-padding {
-  @include margin(0, 0, 12px, 0);
+  @include margin(12px, 0, 12px, 0);
   box-sizing: border-box;
-  width: 961px;
+
   .filter-div {
     overflow: auto;
     line-height: 0;
@@ -56,7 +56,7 @@
 .content-wrapper {
   background-color: $alice-blue;
   overflow-x: hidden;
-  @include padding(16px, 30px, 30px, 32px);
+  @include padding(16px, 30px, 64px, 32px);
   .main-content {
     display: -webkit-box;
     display: -moz-box;
@@ -248,13 +248,14 @@
       width: 961px;
       font-family: 'UHCSans-SemiBold', Helvetica, Arial, sans-serif;
       color: $black-rock;
+      margin-left: 12px;
       ol {
         @include margin(0, 0, 16px, 0);
       }
       .page-title {
         flex-basis: 100%;
         font-size: 36px;
-        @include padding(16px, 0, 32px, 0);
+        @include padding(16px, 0, 20px, 0);
         color: $black-rock;
       }
       .page-subtitle {
