--- a/src/app/components/getting-reimbursed-page/payments/payments.component.scss
+++ b/src/app/components/getting-reimbursed-page/payments/payments.component.scss
@@ -2,10 +2,10 @@
 @import '~src/scss/mixins';
 @import '~src/scss/my-custom-theme';
 .breadcrumb-top-padding {
-  @include margin(0, 0, 12px, 0);
+  @include margin(12px, 0, 12px, 0);
   box-sizing: border-box;
   font-family: 'UHCSans-Medium', Helvetica, Arial, sans-serif;
-  width: 961px;
+
   .filter_bg {
     box-sizing: border-box;
     border: 1px solid $blue;
@@ -58,7 +58,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  @include padding(16px, 20px, 30px, 20px);
+  @include padding(16px, 20px, 64px, 32px);
 
   .payments-content {
     display: flex;
@@ -75,7 +75,7 @@
     }
 
     .cust-width-title {
-      width: 100%;
+      width: 960px;
       font-family: 'UHCSans-SemiBold', Helvetica, Arial, sans-serif;
       color: $black-rock;
       margin-left: 12px;
@@ -83,7 +83,7 @@
       .page-title {
         flex-basis: 100%;
         font-size: 36px;
-        @include padding(16px, 0, 32px, 0);
+        @include padding(16px, 0, 20px, 0);
         line-height: 40px;
       }
       .time--period {
