--- a/src/app/components/issue-resolution-page/calls/calls.component.scss
+++ b/src/app/components/issue-resolution-page/calls/calls.component.scss
@@ -2,10 +2,10 @@
 @import '~src/scss/mixins';
 @import '~src/scss/my-custom-theme';
 .breadcrumb-top-padding {
-  @include margin(0, 0, 12px, 0);
+  @include margin(12px, 0, 12px, 0);
   box-sizing: border-box;
   font-family: 'UHCSans-Medium', Helvetica, Arial, sans-serif;
-  width: 961px;
+
   .filter-div {
     overflow: auto;
     line-height: 0;
@@ -96,7 +96,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  @include padding(16px, 20px, 30px, 20px);
+  @include padding(16px, 20px, 64px, 32px);
   .calls-content {
     display: flex;
     -webkit-flex-flow: row wrap;
@@ -110,7 +110,7 @@
       text-align: left;
     }
     .cust-width-title {
-      width: 100%;
+      width: 960px;
       font-family: 'UHCSans-SemiBold', Helvetica, Arial, sans-serif;
       color: $black-rock;
       margin-left: 12px;
@@ -118,7 +118,7 @@
       .page-title {
         flex-basis: 100%;
         font-size: 36px;
-        @include padding(16px, 0, 32px, 0);
+        @include padding(16px, 0, 20px, 0);
         line-height: 40px;
       }
     }
